--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <a href="#">Find kokoa Account or Password</a>
+    <form action="./friends.html" method="get" class="login-form">
+      <input
+        class="login-form__input"
+        name="username"
+        required
+        type="text"
+        placeholder="Email or phone number"
+      />
+      <input
+        class="login-form__input"
+        name="password"
+        required
+        type="password"
+        placeholder="Password"
+      />
+      <input class="login-form__btn" type="submit" value="Log In" />
+      <a class="login-form__a" href="#">Find kokoa Account or Password</a>
     </form>
 
     <script
