--- a/friends.html
+++ b/friends.html
@@ -27,12 +27,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="./friends.html">
-            <i class="far fa-user fa-2x"></i>
+            <i class="fas fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
-            <i class="fas fa-comment fa-2x"></i>
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
@@ -42,6 +43,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
+            <span class="nav__dot"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
