--- a/friends.html
+++ b/friends.html
@@ -38,6 +38,16 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img class="user-component__avatar" src="./images/myProfilePhoto.jpg" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">KangHyi</h4>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
