--- a/friends.html
+++ b/friends.html
@@ -38,15 +38,42 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component">
-      <div class="user-component__column">
-        <img class="user-component__avatar" src="./images/myProfilePhoto.jpg" />
-        <div class="user-component__text">
-          <h4 class="user-component__title">KangHyi</h4>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar"
+            src="./images/myProfilePhoto.jpg"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">KangHyi</h4>
+            <!-- <h6 class="user-component__subtitle">text whatever</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar user-component__avatar--sm"
+            src="./images/myProfilePhoto.jpg"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Channel</h4>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span>2</span>
+          <i class="fas fa-chevron-right fa-xs"></i>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
