--- a/more.html
+++ b/more.html
@@ -29,8 +29,10 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span>
-          <span class="nav__dot"></span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="./settings.html">
+            <span class="nav__dot"></span>
+            <i class="fas fa-cog fa-lg"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -76,7 +78,19 @@
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text"></span>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa friends</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa friends</span>
           </div>
         </div>
       </div>
