--- a/find.html
+++ b/find.html
@@ -26,9 +26,10 @@
     <header class="screen-header">
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
         <span>
-          <span class="nav__dot"></span>
+          <i class="fas fa-search fa-lg"></i>
+        </span>
+        <span>
           <i class="fas fa-cog fa-lg"></i>
         </span>
       </div>
