--- a/chat.html
+++ b/chat.html
@@ -40,6 +40,16 @@
 
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2022</div>
+      <div class="message-row">
+        <img src="./images/myProfilePhoto.jpg" />
+        <div class="message-row__content">
+          <span class="message__author">KangHyi</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
