--- a/chat.html
+++ b/chat.html
@@ -60,6 +60,19 @@
       </div>
     </main>
 
+    <form class="reply">
+      <div class="reply__column">
+        <i class="fas fa-plus fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message..." />
+        <i class="far fa-smile-wink"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
